# zephyr-qemu-dev

./: .gitmodules  CMakeLists.txt  Kconfig  aws.md  dis.asm  k_work_poll_issue.md  lua.md  prj.conf  qemu_x86.overlay  readme.md  west.yml
certs/: .gitignore  readme.md
inc/: func.h
lib/myzephyrlib/: CMakeLists.txt
lib/myzephyrlib/include/myzephyrlib/: zlib.h
lib/myzephyrlib/src/: zlib.c
lib/simplelib/: CMakeLists.txt
lib/simplelib/include/simplelib/: slib.h
lib/simplelib/src/: slib.c
scripts/: gencertsh.py
src/: app_fs.c  app_fs.h  app_lua.c  app_lua.h  func.c  main.c  utils.c  utils.h
src/certs/: certs.h  readme.md
src/lua_scripts/: entry.lua  readme.md  script1.lua
src/sub/: hello.c  hello.h
src/tls_config/: user-tls.conf
